# becky

./: AGENTS.md  Cargo.toml  README.md  ROADMAP.md  SKILL.md  STATE.md
becky-engine/: Cargo.toml
becky-engine/src/: boot_methods.rs  control.rs  cpu.rs  empy_implementations.rs  exit_codes.rs  host.rs  host_id.rs  lib.rs  machine_conf.rs  metadata.rs  os.rs  state.rs  storage.rs  sys.rs  sys_conf.rs  verify.rs
becky-fx-docker/: Cargo.toml
becky-fx-docker/examples/: run_container.rs
becky-fx-docker/src/: lib.rs
becky-fx-id/: Cargo.toml
becky-fx-id/src/: lib.rs
becky-fx-qemu/: Cargo.toml
becky-fx-qemu/src/: comm.rs  handle.rs  img_json.rs  instance.rs  lib.rs  manager.rs  storage_qcow.rs  utils.rs
becky-fx-qemu/tests/: qemu_img.rs
becky-fx-rust-fn/: Cargo.toml  README.md
becky-fx-rust-fn/examples/: run_registered.rs
becky-fx-rust-fn/src/: lib.rs
becky-fx-system-command/: Cargo.toml
becky-fx-system-command/src/: lib.rs
becky-utils/: Cargo.toml
becky-utils/src/: lib.rs
examples/bare/: Cargo.toml
examples/bare/src/: engine.rs  main.rs
