[workspace]
resolver = "2"
members = [
    "becky-engine",
    "becky-fx-docker",
    "becky-fx-id",
    "becky-fx-qemu",
    "becky-fx-rust-fn",
    "becky-fx-system-command",
    "becky-utils"
]

[workspace.package]
version = "0.0.1"
authors = ["Adam Flott"]
description = "A framework for building compute orchestrators"
edition = "2024"
publish = false
rust-version = "1.95.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamflott/becky"

[workspace.dependencies]
async-trait = "0.1.89"
bon = "3.9.3"
bytesize = { version = "2.4.0", features = ["serde"] }
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "env", "cargo", "string"] }
cloud-init = "0.1.0"
futures = "0.3.32"
libc = "1.0.0-alpha.3"
libproc = "0.14.11"
qapi = { version = "0.15.0", features = ["qmp", "async-tokio-all", "qga"] }
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.150"
sysinfo = "0.39.3"
thiserror = "2.0.18"
tokio = {  version = "1.52.3", features = [ "full", "signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = {  version = "1.23.3", features = ["v4"] }
which = "8.0.3"
wora = { version = "0.0.14" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
opt-level = 3
debug = "none"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
