[package]
name = "becky-engine"
description = ""
edition.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
becky-fx-id = { version = "*", path = "../becky-fx-id" }
bon = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing =  { workspace = true }
uuid = { workspace = true }
wora = { workspace = true }

[lints]
workspace = true

[features]
default = ["serde"]
serde = []

[package.metadata.release]
tag = false
