[package]
name = "becky-fx-docker"
description = ""
edition.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true}
becky-engine = { version = "*", path = "../becky-engine" }
becky-fx-id = { version = "*", path = "../becky-fx-id"}
becky-utils = { version = "*", path = "../becky-utils" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[features]
default = ["serde"]
serde = []

[dev-dependencies]
clap = { workspace = true }

[package.metadata.release]
tag = false
