[package]
name = "becky-fx-id"
description = "Becky f(x) identity"
edition.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "uuid/serde"]

[package.metadata.release]
tag = false
