[package]
name = "becky-fx-qemu"
description = ""
edition.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true}
becky-engine = { version = "*", path = "../becky-engine"}
becky-fx-id = { version = "*", path = "../becky-fx-id" }
becky-fx-system-command = { version = "*", path = "../becky-fx-system-command" }
becky-utils = { version = "*", path = "../becky-utils"}
bon = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true }
cloud-init = { workspace = true }
futures = { workspace = true}
libc = {workspace = true}
libproc = { workspace = true}
qapi = { workspace = true }
qemu-command-builder = {  version = "11.0.0-0" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true}
thiserror = { workspace = true }
tokio = { workspace = true }
tracing =  { workspace = true}
uuid = { workspace = true}
which = { workspace = true}

[lints]
workspace = true

[package.metadata.release]
tag = false
