[package]
name = "becky-fx-system-command"
description = "Becky f(x): system commands"
edition.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
becky-engine = { version = "*", path = "../becky-engine" }
becky-fx-id = { version = "*", path = "../becky-fx-id" }
bon = { workspace = true }
libc = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[features]
default = ["serde"]
serde = []

[package.metadata.release]
tag = false
