[package]
name = "becky-utils"
description = "Misc helpers for the Becky ecosystem"
edition.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[features]
default = ["serde"]
serde = []

[package.metadata.release]
tag = false
